<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ad_map_access</name>
  <version>2.6.3</version>
  <description>ad_map_access</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>

  <exec_depend>ad_physics</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>